--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev":"nodemon server.js"
+    "dev": "nodemon server.js",
+    "dev-css": "npx tailwindcss -i ./public/style.css -o ./public/output.css --watch"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
     "express": "^4.19.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.3"
+    "nodemon": "^3.1.3",
+    "tailwindcss": "^3.4.3"
   }
 }
